test/unittest/error/tst.clause_scope-regular.r
Error fired
Clause executed

-- @@stderr --
dtrace: error in dt_clause_1 for probe ID nnn (profile:::tick-10ms): invalid address ({ptr}) at BPF pc NNN
